--- a/MyFirstWebSite/MyFirstWebSite/MyFirstWebSite.csproj
+++ b/MyFirstWebSite/MyFirstWebSite/MyFirstWebSite.csproj
@@ -68,6 +68,7 @@
     <Content Include="Global.asax" />
     <Content Include="index.html" />
     <Content Include="main.js" />
+    <Content Include="registration.aspx" />
     <Content Include="style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -76,6 +77,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="registration.aspx.cs">
+      <DependentUpon>registration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="registration.aspx.designer.cs">
+      <DependentUpon>registration.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
